# testQuad

./: CMakeLists.txt
logs/: 1mUp_1mFor.txt  2m-FORW_1l4-ARM.txt  hyperLightArm.txt  out-1.ogv  out-3.ogv  out-4.ogv  out.ogv
logs/mpc_quad_seul/: out.ogv
logs/mpc_quad_seul/double_obstacle/: Playlog.py  Playlog.py~
logs/mpc_quad_seul/double_obstacle/1/: log.txt  mpc.cpp  mpc.cpp~  out-2.ogv  out-4.ogv
logs/mpc_quad_seul/double_obstacle/2/: log.txt  mpc.cpp  mpc.cpp~  out-5.ogv
src/: CMakeLists.txt  FreeflyerPinocchio_simpleControl.cpp  MPCQuad.cpp  QuadFreeflyerPinocchio.cpp  QuadPickUp.cpp  Quad_MPC_code_geeration.cpp  arm.py  arm_manipulation.cpp  pendulum_FixMass.cpp  pendulum_FixMass.py  pendulum_VarMass.cpp  pendulum_VarMass.py  playfromfile.py  quadWithArmPinocchio.cpp  quadWithArmPinocchio_simpleControl.cpp  quadcopter2.cpp  quadrotorMinTime.cpp  quadrotorMinTime_EngineSpeed.cpp  quadrotorWithSimpleArm.cpp  quadrotor_EngineSpeed.cpp  rocket.cpp  rocket_c.cpp
